resolves issues with blurred images and text centering

--- a/app/assets/stylesheets/pages/accounts_session_and_password_reset.scss
+++ b/app/assets/stylesheets/pages/accounts_session_and_password_reset.scss
@@ -9,7 +9,6 @@
 .google-sign-in,
 .clever-sign-in,
 .clever-sign-up {
-  height: 50px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%;
@@ -23,9 +22,6 @@
   margin-bottom: 20px;
 }
 
-.google-sign-up {
-
-}
 
 .google-sign-in {
   background-image: image-url('accounts/google_sign_in.svg');
